# gemini-chatbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: huggingface-push.yaml  huggingface-test.yaml  huggingface.yaml
.huggingface/: README.md
.streamlit/: config.toml
snippets/: dockercompose.code-snippets  make.code-snippets  python.code-snippets  sh.code-snippets
src/: app.py
